css/style.css
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 300;
  src: local('Roboto Light'), local('Roboto-Light'), url(fonts/roboto-light.ttf) format('truetype');
}
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'), url(fonts/roboto-regular.ttf) format('truetype');
}

html, body {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  position: relative;
  height: 100%;
}

a {
  text-decoration: none;
}

li {
  line-height: 40px
}

#progress {
  position: fixed;
  width: 100%;
  top: 3px;
  z-index: 110;
}

.absolute-center {
  position: fixed;
  width: 90%;
  height: 80%;
  left: 5%;
  top: 30%;
  text-align: center;
}

.align-center {
  text-align: center!important;
  margin-left: auto;
  margin-right: auto;
}

.align-left {
  text-align: left!important;
  margin-left: auto;
  margin-right: auto;
}

.main {
  position: relative;
  height: auto; min-height: 100%;
}

.topbar {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;
}
.selectbar {
  position: fixed;
  top: 0px;
  width: 100%;
  z-index: 100;
}

.contact-info {
  display: block;
  width: 100%;
  top: 0;
  padding-bottom: 20px;
  opacity: 100;
  z-index: 150;
}
.slide-in {
  animation-duration: 0.3s;
  animation-name: slidein;
}
.slide-out {
  animation-duration: 0.3s;
  animation-name: slideout;
}

@keyframes slidein {
  from {
    margin-right: 100%;
    width: 300%;
  }

  to {
    margin-right: 0%;
    width: 100%;
  }
}
@keyframes slideout {
  from {
    margin-right: 0%;
    width: 100%;
  }

  to {
    margin-right: 100%;
    width: 300%;
  }
}

.welcome {
  min-height: 100%;
  width: 100%;
  justify-content: center;
  align-items: center;
}

.welcome-title {
  position: relative;
  display: inline-block;
  width: 350px;
  height: 100px;
  padding-top: 20px;
  top: -20px;
  border: 2px solid #fff;
  border-radius: 5px;
}
.app-name {
  position: relative;
  top: 5px;
}

.contacts {
  padding: 10px 10px 0 10px;
  display: inline-block;
  position: relative;
  width: 100%;
  top: 65px;
}

.card {
  min-height: 90px;
}

.toolbar {
  padding: 12px 5px 12px 5px;
}

.toolbar img {
  min-width: 30px;
  min-height: 30px;
  max-width: 40px;
  max-height: 40px;
  margin-left: auto;
  margin-right: auto;
  vertical-align: middle;
  border-radius: 3px;
}

.dropdown-link {
  line-height: 40px;
  height: 40px;
  width: 100%;
  font-size: 1rem;
  font-weight: 300;
}

.pick-area img:hover {
  border: 3px solid #fff;
}
.pick-file {
  position: absolute;
  display: inline-block!important;
  bottom: 0px;
  opacity: 0.5;
  left: 3px;
  right: 3px;
  width: 170px;
  height: 50px;
  border-radius: 3px;
}
.pick-file:hover {
  opacity: 0.6;
}

.fs-title {
  font-weight: 300;
}

.search {
  width: 180px;
  padding: 0 10px 0 10px;
  background-color: #fff;
  color: #000!important;
  border: 0;
}
.clear-search {
  left: -35px;
  top: 3px;
}

.form-field {
  margin-right: 40px!important;
}

.form-icon {
  display: block;
  position: relative;
  float: right;
  top: -45px;
}

.dialog {
  top: 15px;
}

.checkbox-workspace {
  position: relative;
  top: 10px;
}

.checkbox__label {
  margin: 10px 0px 0px 7px;
}

.row__primary {
  width: 50px!important;
}
.list-row {
  padding: 0;
}
.list-row__primary {
  display:block;
  width: 40px;
}
.list-row__primary img {
  width: 55px!important;
  height: 55px!important;
}
.dialog--s {
  left: 40%;
}

.grad-bg {
  background: rgb(63, 81, 181);
  background: -moz-linear-gradient(-45deg,  rgba(63, 81, 181, 1) 0%, rgba(3, 169, 244, 1) 100%);
  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(3, 169, 244, 1)), color-stop(100%,rgba(3, 169, 244, 1)));
  background: -webkit-linear-gradient(-45deg,  rgba(63, 81, 181, 1) 0%,rgba(3, 169, 244, 1) 100%);
  background: -o-linear-gradient(-45deg,  rgba(63, 81, 181, 1) 0%,rgba(3, 169, 244, 1) 100%);
  background: -ms-linear-gradient(-45deg,  rgba(63, 81, 181, 1) 0%,rgba(3, 169, 244, 1) 100%);
  background: linear-gradient(135deg,  rgba(63, 81, 181, 1) 0%,rgba(123, 214, 255, 1) 100%);
}

.inline-block {
  display: inline-block!important;
}

.disabled {
  pointer-events: none;
  opacity: 0.5;
  background: #CCC;
}
.pointer {
  cursor: pointer;
}

.newimg {
  width: 180px;
  height: 180px;
}

.crop-area {
  display: inline-block;
  overflow: hidden;
  width:200px;
  height:200px;
}
.cropped-area {
  display: inline-block;
  overflow: hidden;
  width:100px;
}

.truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.max-200 {
  width: 200px;
}

.footer {
  display: inline-block;
  margin-bottom: 10px;
  z-index: 10;
  bottom: 0;
  width: 100%;
}

.initial {
  text-transform: initial!important;
}

*::-webkit-input-placeholder { /* WebKit browsers */
  color:    #ccc!important;
}
*:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
   color:    #ccc!important;
   opacity:  1;
}
*::-moz-placeholder { /* Mozilla Firefox 19+ */
   color:    #ccc!important;
   opacity:  1;
}
*:-ms-input-placeholder { /* Internet Explorer 10+ */
   color:    #ccc!important;
}

@media screen and (max-width: 1023px) {
  .dialog--l {
    width: 96%;
    margin-left: -48%;
  }
  .dialog--s {
    width: 96%;
    margin-left: -38%;
  }
}

@media (max-width: 600px) {
  .welcome { overflow: auto; }
  .welcome-title {
    position: relative;
    display: inline-block;
    width: 300px;
    height: 100px;
    padding-top: 20px;
    top: -20px;
    border: 2px solid #fff;
    border-radius: 5px;
  }

  .fs-display-2 {
    font-size: 2.125rem;
    font-weight: 400;
    line-height: 40px;
  }

  .toolbar {
    padding: 7px 5px 12px 5px;
  }
  .long-label {
    display: none;
  }
  .hide-small {
    display: none;
  }
}

